# stsdigisorting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  constants.h  constants.h.template  datastructures.h  device.h  kernels.h  main.cpp  sortblock.h  sorting.h  types.h
benchmark/: benchmark.h  blocksort.h  jansergeysort.h  jansergeysort_hip.h  jansergeysort_sided.h  stdsort.h
benchmarks/: benchmark.h  blocksort.h  jansergeysort.h  partition.h  stdsort.h
data/: count.sh  digis_2022-09-15_12-05-45-ev500_auau_12gev_mbias_1-2-1.csv
data/2/: digis_2022-08-23_15-03-11_ev500_auau_12gev_mbias_1_2_1.csv
lib/: xpu.sh
scripts/: bench.sh  cm.sh  cmp.sh  run.sh  sqlite.sh
sorting/: BlockSort.cpp  BlockSort.h  JanSergeySort.cpp  JanSergeySort.h  JanSergeySortParInsert.cpp  JanSergeySortParInsert.h  JanSergeySortSided.cpp  JanSergeySortSided.h  JanSergeySortSimpleSum.cpp  JanSergeySortSimpleSum.h  JanSergeySortSingleBlock.cpp  JanSergeySortSingleBlock.h  SortKernel.cpp  SortKernel.h  device_fun.h  kernels.h  kernels_hip.h  sorting.h  sorting_hip.h  sortnew.h
src/: common.h  constants.h  constants.h.template  datastructures.h  device.h  main.cpp
src/algo/: Partition.cpp  Partition.h
src/cbm/: CbmDefs.h  CbmStsDigi.h
src/sorting/: AddressBuckets.cpp  AddressBuckets.h  BlockSort.cpp  BlockSort.h  JanSergeySort.cpp  JanSergeySortParInsert.h  JanSergeySortSimple.cpp  JanSergeySortSimple.h  JanSergeySortSingleBlock.cpp  JanSergeySortSingleBlock.h
